EC2_web_php_mysql/EC2_web_php.yml
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Default: devenv-key
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [ t2.micro ]
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref 'InstanceType'
      SecurityGroups: [!Ref 'InstanceSecurityGroup']
      KeyName: devenv-key
      ImageId: ami-403e2524
      UserData: !Base64 |
        #!/bin/bash
        mkdir /log_alex
        echo "Logging installation phase " >  /log_alex/log.txt
        sudo yum update –y >>  /log_alex/log.txt
        sudo yum install -y httpd24 php56 php56-mysqlnd mysql >>  /log_alex/log.txt
        sudo service httpd start >>  /log_alex/log.txt
        sudo chkconfig httpd on >>  /log_alex/log.txt
        sudo groupadd www >>  /log_alex/log.txt
        sudo usermod -a -G www ec2-user >>  /log_alex/log.txt
        chown -R root:www /var/www >>  /log_alex/log.txt
        chmod 2775 /var/www >>  /log_alex/log.txt
        find /var/www -type d -exec chmod 2775 {} + >>  /log_alex/log.txt
        find /var/www -type f -exec chmod 0664 {} + >>  /log_alex/log.txt
        echo "<?php phpinfo(); ?>" > /var/www/html/phpinfo.php
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref 'EC2Instance'
  AZ:
    Description: Availability Zone of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, AvailabilityZone]
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicDnsName]
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicIp]
